# ivm-compiler

./: README.md  README.txt
gcc-10.2.0-ivm64/: .gitignore  config.sub
gcc-10.2.0-ivm64/gcc/: builtins.c  builtins.c.org  calls.c  config.gcc  explow.c  opts.c  passes.c  tree-cfg.c
gcc-10.2.0-ivm64/gcc/config/ivm64/: README.txt  as  ivm64-opts.h  ivm64-protos.h  ivm64.c  ivm64.h  ivm64.md  ld  peephole.md  predicates.md
gcc-10.2.0-ivm64/libgcc/: config.host  unwind-sjlj.c
gcc-10.2.0-ivm64/libgloss/ivm64/: configure.in  crt0.c  outbyte.h  posix.c  read.c  sbrk.c  wait.c  write.c
gcc-10.2.0-ivm64/libgloss/libnosys/: configure
gcc-10.2.0-ivm64/newlib/: Makefile.in  aclocal.m4  configure
gcc-10.2.0-ivm64/newlib/libc/: configure
gcc-10.2.0-ivm64/newlib/libc/machine/: configure  configure.in
gcc-10.2.0-ivm64/newlib/libc/sys/: aclocal.m4  configure
gcc-12.2.0-ivm64/: .gitignore  config.sub
gcc-12.2.0-ivm64/fixincludes/: inclhack.def
gcc-12.2.0-ivm64/gcc/: builtins.cc  calls.cc  config.gcc  except.cc  explow.cc  glimits.h  optabs.cc  opts.cc  rtlanal.cc  stmt.cc  tree-cfg.cc
gcc-12.2.0-ivm64/gcc/config/ivm64/: README.txt  as  constraints.md  ivm64-protos.h  ivm64.cc  ivm64.h  (+6 more)
gcc-12.2.0-ivm64/libgcc/: config.host  unwind-sjlj.c
gcc-12.2.0-ivm64/libgloss/: configure  configure.in
gcc-12.2.0-ivm64/libgloss/ivm64/: Makefile.in  _execve.c  close.c  crt0.c  fstat.c  gettod.c  kill.c  link.c  open.c  outbyte.h  posix.c  printk.c  read.c  sbrk.c  stat.c  unlink.c
gcc-12.2.0-ivm64/libgloss/libnosys/: configure
gcc-12.2.0-ivm64/newlib/: Makefile.in  configure  configure.host  configure.in  configure.in.org
gcc-8.3.0-ivm64/: .gitignore  config.sub
gcc-8.3.0-ivm64/gcc/: calls.c  config.gcc  explow.c  fold-const.c  opts.c  passes.c  reload1.c  tree-cfg.c  tree-vect-stmts.c  tree.h  wide-int.h
gcc-8.3.0-ivm64/gcc/c/: c-typeck.c
gcc-8.3.0-ivm64/libgcc/: config.host  unwind-sjlj.c
gcc-8.3.0-ivm64/libgloss/: configure  configure.in
gcc-8.3.0-ivm64/libgloss/ivm64/: Makefile.in  _exit.c  chown.c  configure  crt0.c  execve.c  fork.c  getpid.c  isatty.c  lseek.c  outbyte.h  printk.c  readlink.c  sbrk.c  stat.c  symlink.c  times.c
gcc-8.3.0-ivm64/libgloss/libnosys/: configure.in
gcc-8.3.0-ivm64/newlib/: .gitignore  Makefile.in.ivm64  configure.host  configure.in
gcc-8.3.0-ivm64/newlib/libc/: aclocal.m4
gcc-8.3.0-ivm64/newlib/libc/machine/ivm64/: Makefile.am  Makefile.in  alloca.c  configure
gcc-8.3.0-ivm64/newlib/libc/machine/ivm64/string/: memccpy.c  memchr.c  memcmp.c  memcpy.c  memmove.c  memset.c  stpcpy.c  stpncpy.c  strchr.c  strncmp.c
misc/docs/: README.md
misc/tests/examples/: 00-main.c  01-funcomposition.c  02-asm-ivm64-globals.c  03-asm-ivm64-locals.c  04-asm-io-puts.c  05-struct-simple.c  06-array-ref.c  07-array-subscript.c  08-dataref.c  09-variadic.c  10-strings.c  11-arith.c  12-floats.c  13-math.c  14-ret-variadic-funp.c  15-atexit.c  16-import.c  17-sjlj.c  18-main_args.c
misc/tests/tcc/: 07_function.c  22_floating_point.c  25_quicksort_distilled.c  34_array_assignment.c  73_arm64.c  83_utf8_in_identifiers.c  90_struct-init.stdout  93_integer_promotion.c  Makefile
(+109 files in other folders)
